# SimpleEditor

./: #Editor.cc#  .gitignore  CMakeLists.txt  Editor.cc  Editor.cpp  Editor.h  Makefile  README.md  debug.h  exception.h  simple.cc  utility.cc  utility.h
docs/: TODO.md
