cmake_minimum_required(VERSION 3.10)

if(DEFINED $ENV{MY_EXEC_FILE})
    set(THE_EXEC_FILE $ENV{MY_EXEC_FILE})
else()
    set(THE_EXEC_FILE "simple.cc")
endif()
if(DEFINED $ENV{MY_PROJECT_NAME})
    set(THE_PROJECT_NAME $ENV{MY_PROJECT_NAME})
else()
    set(THE_PROJECT_NAME SimpleEditor)
endif()

project(SimpleEditor)
set(CMAKE_CXX_STANDARD 20)
include_directories(${PROJECT_SOURCE_DIR})
# message("$ENV{MY_EXECUTABLES}")
# add_executable(SimpleEditor ${THE_EXEC_FILE} $ENV{MY_EXECUTABLES})
add_executable(SimpleEditor ${THE_EXEC_FILE} Editor.cc utility.cc)